--- a/style.css
+++ b/style.css
@@ -1,24 +1,53 @@
+*{
+    margin:0;
+    padding:0;
+}
+
+body,html{
+    backgraund:black;
+}
+
 #principal{
-    border: 3px solid #1a03a0;
-    width: 680px;
-    margin: 90px auto;
+    width: 40%;
+    margin: 3% auto;
     padding: 100px 100px;
     text-align: center;
-    background: #5672ec;
     font-family: Arial, Helvetica, sans-serif;
     color: aliceblue;
+    border-radius: 180px;
+    font-size: 1.1em;
+    font-family: cursive;
+    animation: co 5s linear infinite;
 
+
+}
+
+
+@keyframes co {
+    0% {
+        background-color: blue;
+    }
+    50% {
+        background-color: #0ce3ff;
+    }
+    100% {
+        background-color: blue;
+    }
+  
 }
 
 a:link , a:visited{
     text-decoration: none;
     color: #5672ec;
     background-color: aliceblue;
-    padding: 5px 100px;
-    
+    padding: 5px 45px;
+    border-radius: 20px;
+    margin: 0 auto;
+    transition: 1s;
 }
 
 a:hover{
     background: #1a03a0;
 }
+
 
