--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-*{
-    margin:0;
-    padding:0;
-}
-
 body,html{
-    backgraund:black;
+    background: black;
+  
 }
 
 #principal{
@@ -14,7 +10,7 @@ body,html{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: aliceblue;
-    border-radius: 180px;
+    border-radius: 250px;
     font-size: 1.1em;
     font-family: cursive;
     animation: co 5s linear infinite;
@@ -40,7 +36,7 @@ a:link , a:visited{
     text-decoration: none;
     color: #5672ec;
     background-color: aliceblue;
-    padding: 5px 45px;
+    padding: 5px 35px;
     border-radius: 20px;
     margin: 0 auto;
     transition: 1s;
@@ -48,6 +44,13 @@ a:link , a:visited{
 
 a:hover{
     background: #1a03a0;
+}
+
+@media all and (max-width:720px){
+    img{
+        margin-right: 800px;
+    }
+
 }
 
 
